fix wrap

--- a/src/app/report/report-details.component.scss
+++ b/src/app/report/report-details.component.scss
@@ -8,6 +8,9 @@
 
   .title {
     margin-left: 1em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .link {
